feat: add ory example

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,20 +1,11 @@
 AUTH_SECRET= # `npx auth secret` or `openssl rand -hex 32`
 
-AUTH_AUTH0_ID=
-AUTH_AUTH0_SECRET=
-AUTH_AUTH0_ISSUER=
-
-AUTH_FACEBOOK_ID=
-AUTH_FACEBOOK_SECRET=
-
-AUTH_GITHUB_ID=
-AUTH_GITHUB_SECRET=
-
-AUTH_GOOGLE_ID=
-AUTH_GOOGLE_SECRET=
-
-AUTH_TWITTER_ID=
-AUTH_TWITTER_SECRET=
+# higlight-start
+# You can find the Ory SDK URL under **API endpoints** in https://console.ory.sh/projects/current/settings
+AUTH_ORY_SDK_URL= # https://{slug}.projects.oryapis.com
+AUTH_ORY_CLIENT_ID= # The OAuth2 client ID
+AUTH_ORY_CLIENT_SECRET= # The OAuth2 client secret
+# highlight-end
 
 # THIRD_PARTY_API_EXAMPLE_BACKEND= # Read more at https://authjs.dev/guides/integrating-third-party-backends
 
