chore: fix typo

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,6 @@
 AUTH_SECRET= # `npx auth secret` or `openssl rand -hex 32`
 
-# higlight-start
+# highlight-start
 # You can find the Ory SDK URL under **API endpoints** in https://console.ory.sh/projects/current/settings
 AUTH_ORY_SDK_URL= # https://{slug}.projects.oryapis.com
 AUTH_ORY_CLIENT_ID= # The OAuth2 client ID
