--- a/package.json
+++ b/package.json
@@ -25,34 +25,34 @@
     "trailingComma": "es5"
   },
   "dependencies": {
-    "@auth/unstorage-adapter": "^2.0.0",
-    "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-navigation-menu": "^1.1.3",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@auth/unstorage-adapter": "^2.11.1",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-slot": "^1.2.4",
     "@simplewebauthn/server": "^9.0.3",
     "@vercel/kv": "^1.0.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "lucide-react": "^0.274.0",
-    "next": "latest",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.553.0",
+    "next": "^16.0.1",
     "next-auth": "beta",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^1.14.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "unstorage": "^1.10.1"
+    "unstorage": "^1.17.2"
   },
   "devDependencies": {
     "@types/node": "^20.12.8",
-    "@types/react": "^18.2.23",
-    "@types/react-dom": "^18.2.8",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
     "prettier": "^3.5.3",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.7.0"
   },
   "engines": {
     "node": ">=20.0.0"
