refactor: rename environment variables for Ory integration and update references in code

--- a/.env.local.example
+++ b/.env.local.example
@@ -2,9 +2,9 @@ AUTH_SECRET= # `npx auth secret` or `openssl rand -hex 32`
 
 # highlight-start
 # You can find the Ory SDK URL under **API endpoints** in https://console.ory.sh/projects/current/settings
-AUTH_ORY_SDK_URL= # https://{slug}.projects.oryapis.com
-AUTH_ORY_CLIENT_ID= # The OAuth2 client ID
-AUTH_ORY_CLIENT_SECRET= # The OAuth2 client secret
+ORY_SDK_URL= # https://{slug}.projects.oryapis.com
+ORY_CLIENT_ID= # The OAuth2 client ID
+ORY_CLIENT_SECRET= # The OAuth2 client secret
 # highlight-end
 
 # THIRD_PARTY_API_EXAMPLE_BACKEND= # Read more at https://authjs.dev/guides/integrating-third-party-backends
